Updating notebook volume location for docker

--- a/vms/docker-compose.yml
+++ b/vms/docker-compose.yml
@@ -5,5 +5,5 @@ pyspark:
     - 8888:8888
     - 8080:8080
   volumes:
-    - .:/notebooks
+    - ../nootbooks:/notebooks
   #command: /etc/bootstrap.sh && /usr/local/spark/sbin/start-master.sh && IPYTHON_OPTS="notebook --no-browser --ip=0.0.0.0 --port 8888" pyspark
